--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 }
 body {
   background-color: black;
+  color: white;
   font-family: futura-pt, sans-serif;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
@@ -13,10 +14,11 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 100vh;
+  width: 90%;
+  height: 50%;
   position: absolute;
-  top: 50%; left: 50%;
+  top: 50%;
+  left: 50%;
   transform: translate(-50%, -50%);
 }
 #box {
@@ -33,7 +35,6 @@ body {
 #timer-text {
   margin: 0;
   padding: 0;
-  color: #fff;
   font-weight: 500;
   text-align: center;
 }
@@ -58,4 +59,18 @@ body {
 }
 .reset-button {
     background-color: firebrick;
+}
+.animatronic-div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+  height: 10%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  margin: 0;
+  padding: 0;
+  color: #fff;
+  font-weight: 500;
+  text-align: center;
 }
